--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>OpenSCAD Playground</title>
-    <meta name="description" content="OpenSCAD Playground: edit .scad models and render them to STL from the browser (WebAssembly build OpenSCAD, with Monaco editor and STL Viewer)">
+    <title>VenusCAD - AI-Powered 3D CAD Editor</title>
+    <meta name="description" content="VenusCAD: AI-powered OpenSCAD editor with real-time 3D preview, Monaco code editor, and intelligent code generation">
 
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="logo192.png">
